fixed portfolio images covering mobile menu

--- a/css/main.css
+++ b/css/main.css
@@ -96,6 +96,7 @@ body.modal-open {
 }
 
 .menu-container {
+  z-index: 999;
   position: fixed;
   top: 0;
   left: 0;
